--- a/Tools/Main.csproj
+++ b/Tools/Main.csproj
@@ -127,6 +127,14 @@
       <Project>{8ECA933F-6458-441C-9963-479C91CA664F}</Project>
       <Name>Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Modules\CharacterPresenter\CharacterPresenter.csproj">
+      <Project>{d5cd3f18-098a-4018-b5ea-8b5d34e220ca}</Project>
+      <Name>CharacterPresenter</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Modules\Characters\Characters.csproj">
+      <Project>{0c841830-4cf5-4c8e-a557-a0a811c1a00f}</Project>
+      <Name>Characters</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Modules\LocationPresenter\LocationPresenter.csproj">
       <Project>{8db91165-a4e4-4b6c-a03f-0edc33f902bc}</Project>
       <Name>LocationPresenter</Name>
@@ -150,7 +158,6 @@
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\Fody.1.28.3\build\Fody.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Fody.1.28.3\build\Fody.targets'))" />
-    <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
   </Target>
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
