--- a/Modules/Characters/Characters.csproj
+++ b/Modules/Characters/Characters.csproj
@@ -52,7 +52,22 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Converter\AppearanceDataContractConverter.cs" />
+    <Compile Include="Converter\AppearancesCoverter.cs" />
+    <Compile Include="Converter\CharacterDataContractConverter.cs" />
+    <Compile Include="Converter\GenderConverter.cs" />
+    <Compile Include="DataContracts\AppearanceDataContract.cs" />
+    <Compile Include="DataContracts\CharacterDataContract.cs" />
+    <Compile Include="CharactersRepository.cs" />
+    <Compile Include="DataContracts\MetadataDataContract.cs" />
+    <Compile Include="Converter\MetadataDataContractConverter.cs" />
+    <Compile Include="Migrations\201504191803120_Initial.cs" />
+    <Compile Include="Migrations\201504191803120_Initial.Designer.cs">
+      <DependentUpon>201504191803120_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Converter\TagConverter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -64,7 +79,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="DataContracts\" />
+    <EmbeddedResource Include="Migrations\201504191803120_Initial.resx">
+      <DependentUpon>201504191803120_Initial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
@@ -72,7 +89,7 @@
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    </Target>
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
