--- a/Modules/CharacterPresenter/packages.config
+++ b/Modules/CharacterPresenter/packages.config
@@ -2,7 +2,8 @@
 <packages>
   <package id="Caliburn.Micro" version="2.0.2" targetFramework="net45" />
   <package id="Caliburn.Micro.Core" version="2.0.2" targetFramework="net45" />
+  <package id="Extended.Wpf.Toolkit" version="2.4" targetFramework="net453" />
   <package id="Fody" version="1.28.3" targetFramework="net453" developmentDependency="true" />
   <package id="MahApps.Metro" version="1.1.2.0" targetFramework="net45" />
-  <package id="PropertyChanged.Fody" version="1.49.0" targetFramework="net453" developmentDependency="true" />
+  <package id="PropertyChanged.Fody" version="1.49.1" targetFramework="net453" developmentDependency="true" />
 </packages>
