--- a/Tools/packages.config
+++ b/Tools/packages.config
@@ -3,7 +3,8 @@
   <package id="Caliburn.Micro" version="2.0.2" targetFramework="net453" />
   <package id="Caliburn.Micro.Core" version="2.0.2" targetFramework="net453" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net453" />
+  <package id="Extended.Wpf.Toolkit" version="2.4" targetFramework="net453" />
   <package id="Fody" version="1.28.3" targetFramework="net453" developmentDependency="true" />
   <package id="MahApps.Metro" version="1.1.2.0" targetFramework="net453" />
-  <package id="PropertyChanged.Fody" version="1.49.0" targetFramework="net453" developmentDependency="true" />
+  <package id="PropertyChanged.Fody" version="1.49.1" targetFramework="net453" developmentDependency="true" />
 </packages>
