- Added write and deleta capability to the CharacterRepository - Added [Serializable] attribute to DictionaryRange and ServiceException - Renamed Apearances to Occourences to avoid confusion with a character physical appearance - Fixed a layout bug where the Save and Delete buttions on the CharactersView had a fixed size -

--- a/Modules/CharacterPresenter/CharacterPresenter.csproj
+++ b/Modules/CharacterPresenter/CharacterPresenter.csproj
@@ -42,7 +42,10 @@
     </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <HintPath>..\..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer">
+      <HintPath>..\..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="MahApps.Metro">
       <HintPath>..\packages\MahApps.Metro.1.1.2.0\lib\net45\MahApps.Metro.dll</HintPath>
@@ -55,6 +58,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\MahApps.Metro.1.1.2.0\lib\net45\System.Windows.Interactivity.dll</HintPath>
@@ -97,8 +101,10 @@
     <Compile Include="ViewModels\CharacterDetailsViewModel.cs" />
     <Compile Include="ViewModels\CharacterPortraitViewModel.cs" />
     <Compile Include="ViewModels\CharactersViewModel.cs" />
+    <Compile Include="ViewModels\NewCharacterViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
