--- a/Modules/Characters/Characters.csproj
+++ b/Modules/Characters/Characters.csproj
@@ -52,18 +52,32 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Converter\AppearanceConverter.cs" />
+    <Compile Include="Converter\CharacterConverter.cs" />
     <Compile Include="Converter\AppearanceDataContractConverter.cs" />
-    <Compile Include="Converter\AppearancesCoverter.cs" />
+    <Compile Include="Converter\GendersConverter.cs" />
+    <Compile Include="Converter\MetadataConverter.cs" />
+    <Compile Include="Converter\OccourcenDataContractCoverter.cs" />
     <Compile Include="Converter\CharacterDataContractConverter.cs" />
-    <Compile Include="Converter\GenderConverter.cs" />
+    <Compile Include="Converter\GenderDataContractConverter.cs" />
+    <Compile Include="Converter\OccurrencesConverter.cs" />
+    <Compile Include="Converter\TagsConverter.cs" />
     <Compile Include="DataContracts\AppearanceDataContract.cs" />
     <Compile Include="DataContracts\CharacterDataContract.cs" />
     <Compile Include="CharactersRepository.cs" />
     <Compile Include="DataContracts\MetadataDataContract.cs" />
     <Compile Include="Converter\MetadataDataContractConverter.cs" />
-    <Compile Include="Migrations\201504191803120_Initial.cs" />
+    <Compile Include="Migrations\201504191803120_Initial.cs">
+      <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
+    </Compile>
     <Compile Include="Migrations\201504191803120_Initial.Designer.cs">
       <DependentUpon>201504191803120_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201504252332053_Version2.cs">
+      <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
+    </Compile>
+    <Compile Include="Migrations\201504252332053_Version2.Designer.cs">
+      <DependentUpon>201504252332053_Version2.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -81,6 +95,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201504191803120_Initial.resx">
       <DependentUpon>201504191803120_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201504252332053_Version2.resx">
+      <DependentUpon>201504252332053_Version2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
