- removed not used async code - removed explicit interface implementations - made location repository writable again.

--- a/Modules/Locations/Locations.csproj
+++ b/Modules/Locations/Locations.csproj
@@ -69,7 +69,7 @@
     <Compile Include="Converter\StarSystemLocationConverter.cs" />
     <Compile Include="Converter\SystemDataContractConverter.cs" />
     <Compile Include="DataContracts\CityDetailsDataContract.cs" />
-    <Compile Include="DataContracts\LocationDataContract.cs" />
+    <Compile Include="DataContracts\LocationDatabaseItem.cs" />
     <Compile Include="DataContracts\LocationDetailsDataContract.cs" />
     <Compile Include="DataContracts\PlanetDetailsDataContract.cs" />
     <Compile Include="DataContracts\SectorDetailsDataContract.cs" />
