--- a/Modules/Characters/Characters.csproj
+++ b/Modules/Characters/Characters.csproj
@@ -36,6 +36,9 @@
     <Reference Include="EntityFramework">
       <HintPath>..\..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
+    <Reference Include="EntityFramework.Extended">
+      <HintPath>..\..\packages\EntityFramework.Extended.6.1.0.133\lib\net45\EntityFramework.Extended.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework.SqlServer">
       <HintPath>..\..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
@@ -52,35 +55,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Converter\WriteConverter\AppearanceWriteConverter.cs" />
-    <Compile Include="Converter\WriteConverter\CharacterWriteConverter.cs" />
-    <Compile Include="Converter\ReadConverter\AppearanceReadConverter.cs" />
-    <Compile Include="Converter\ReadConverter\CharacterReadConverter.cs" />
-    <Compile Include="Converter\ReadConverter\GenderReadConverter.cs" />
-    <Compile Include="Converter\ReadConverter\MetadataReadConverter.cs" />
-    <Compile Include="Converter\ReadConverter\OccurrencesReadConverter.cs" />
-    <Compile Include="Converter\ReadConverter\TagsReadConverter.cs" />
-    <Compile Include="Converter\WriteConverter\GenderWriteConverter.cs" />
-    <Compile Include="Converter\WriteConverter\MetadataWriteConverter.cs" />
-    <Compile Include="Converter\WriteConverter\OccurrenceWriteConverter.cs" />
-    <Compile Include="Converter\WriteConverter\TagsWriteConverter.cs" />
-    <Compile Include="Migrations\201505091320487_Version2.cs" />
-    <Compile Include="Migrations\201505091320487_Version2.Designer.cs">
-      <DependentUpon>201505091320487_Version2.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Models\AppearanceDatabaseItem.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Models\CharacterDatabaseItem.cs" />
     <Compile Include="CharactersRepository.cs" />
-    <Compile Include="Models\MetadataDatabaseItem.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Migrations\201505071652305_Initial.cs" />
-    <Compile Include="Migrations\201505071652305_Initial.Designer.cs">
-      <DependentUpon>201505071652305_Initial.cs</DependentUpon>
-    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\AppearanceItem.cs" />
+    <Compile Include="Models\CharacterItem.cs" />
+    <Compile Include="Models\CharacterMetadataItem.cs" />
+    <Compile Include="Models\PortraitItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -93,14 +73,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201505071652305_Initial.resx">
-      <DependentUpon>201505071652305_Initial.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201505091320487_Version2.resx">
-      <DependentUpon>201505091320487_Version2.cs</DependentUpon>
-    </EmbeddedResource>
+    <Folder Include="Converter\ReadConverter\" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
