--- a/Modules/Locations/Locations.csproj
+++ b/Modules/Locations/Locations.csproj
@@ -79,16 +79,22 @@
     <Compile Include="DataContracts\StarSystemDetailsDataContract.cs" />
     <Compile Include="LocationRepository.cs" />
     <Compile Include="LocationRepositoryFactory.cs" />
-    <Compile Include="Migrations\201503111633274_Initial.cs" />
+    <Compile Include="Migrations\201503111633274_Initial.cs">
+      <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
+    </Compile>
     <Compile Include="Migrations\201503111633274_Initial.Designer.cs">
       <DependentUpon>201503111633274_Initial.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201503111635149_Version1.cs" />
+    <Compile Include="Migrations\201503111635149_Version1.cs">
+      <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
+    </Compile>
     <Compile Include="Migrations\201503111635149_Version1.Designer.cs">
       <DependentUpon>201503111635149_Version1.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs">
+      <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
