--- a/Modules/Characters/Characters.csproj
+++ b/Modules/Characters/Characters.csproj
@@ -55,13 +55,18 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CharactersRepository.cs" />
+    <Compile Include="CharacterReadConverter.cs" />
+    <Compile Include="CharacterRepositoryFactory.cs" />
+    <Compile Include="CharacterRepository.cs" />
+    <Compile Include="CharacterWriteConverter.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AppearanceItem.cs" />
     <Compile Include="Models\CharacterItem.cs" />
     <Compile Include="Models\CharacterMetadataItem.cs" />
     <Compile Include="Models\PortraitItem.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs">
+      <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -73,7 +78,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Converter\ReadConverter\" />
+    <Folder Include="Converter\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
