--- a/Modules/Characters/Characters.csproj
+++ b/Modules/Characters/Characters.csproj
@@ -55,10 +55,10 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CharacterReadConverter.cs" />
+    <Compile Include="Converter\CharacterReadConverter.cs" />
     <Compile Include="CharacterRepositoryFactory.cs" />
     <Compile Include="CharacterRepository.cs" />
-    <Compile Include="CharacterWriteConverter.cs" />
+    <Compile Include="Converter\CharacterWriteConverter.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AppearanceItem.cs" />
     <Compile Include="Models\CharacterItem.cs" />
@@ -77,9 +77,7 @@
       <Name>Core</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Converter\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
