--- a/Modules/Characters/Characters.csproj
+++ b/Modules/Characters/Characters.csproj
@@ -70,6 +70,12 @@
     <Compile Include="Converter\PortraitReadConverter.cs" />
     <Compile Include="Converter\TagsReadConverter.cs" />
     <Compile Include="Converter\TagsWriteConverter.cs" />
+    <Compile Include="Migrations\201507091743178_Initial.cs">
+      <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
+    </Compile>
+    <Compile Include="Migrations\201507091743178_Initial.Designer.cs">
+      <DependentUpon>201507091743178_Initial.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AppearanceItem.cs" />
     <Compile Include="Models\CharacterItem.cs" />
@@ -88,7 +94,11 @@
       <Name>Core</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201507091743178_Initial.resx">
+      <DependentUpon>201507091743178_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
