--- a/Modules/LocationPresenter/LocationPresenter.csproj
+++ b/Modules/LocationPresenter/LocationPresenter.csproj
@@ -74,7 +74,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs">
+      <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
+    </Compile>
     <Compile Include="LocationTemplateSelector.cs" />
     <Compile Include="ViewModels\LocationDetailsViewModel.cs">
       <SubType>Code</SubType>
@@ -84,9 +86,6 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="ViewModels\NewLocationViewModel.cs" />
-    <Compile Include="Views\NewLocationView.xaml.cs">
-      <DependentUpon>NewLocationView.xaml</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Page Include="Resources\LocationDataTemplates.xaml">
