--- a/Modules/CharacterPresenter/CharacterPresenter.csproj
+++ b/Modules/CharacterPresenter/CharacterPresenter.csproj
@@ -97,7 +97,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CharacterDataTemplateSelector.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs">
+      <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
+    </Compile>
     <Compile Include="ViewModels\CharacterDetailsViewModel.cs" />
     <Compile Include="ViewModels\CharacterPortraitViewModel.cs" />
     <Compile Include="ViewModels\CharactersViewModel.cs" />
@@ -121,9 +123,7 @@
       <Name>Tags</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Page Include="Views\CharacterDetailsView.xaml">
       <SubType>Designer</SubType>
