--- a/Core/packages.config
+++ b/Core/packages.config
@@ -6,4 +6,5 @@
   <package id="Fody" version="1.29.3" targetFramework="net46" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net453" />
   <package id="PropertyChanged.Fody" version="1.50.3" targetFramework="net46" developmentDependency="true" />
+  <package id="StyleCop.Analyzers" version="1.0.0-beta013" targetFramework="net46" developmentDependency="true" />
 </packages>
