--- a/Modules/Locations/packages.config
+++ b/Modules/Locations/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net453" />
   <package id="EntityFramework.Extended" version="6.1.0.168" targetFramework="net46" />
+  <package id="StyleCop.Analyzers" version="1.0.0-beta013" targetFramework="net46" developmentDependency="true" />
 </packages>
